--- a/api-gateway/Docker-compose.yml
+++ b/api-gateway/Docker-compose.yml
@@ -1,120 +1,21 @@
 version: '3.8'
 
 services:
-  # Eureka Server (Service Discovery)
-  eureka-server:
-    image: eureka-server:latest
-    container_name: eureka-server
-    ports:
-      - "8761:8761"
-    environment:
-      - eureka.client.register-with-eureka=false
-      - eureka.client.fetch-registry=false
-      - eureka.server.wait-time-in-ms-when-sync-empty=0
-    networks:
-      - backend
-
-  # API Gateway
   api-gateway:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: api-gateway
     ports:
       - "9000:9000"
-    depends_on:
-      - eureka-server
     environment:
-      - SPRING_APPLICATION_NAME=api-gateway
-      - SERVER_PORT=9000
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-      - security.jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
+      # Override các giá trị cho Eureka để các container giao tiếp với nhau:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://eureka-server:8761/eureka/"
+      EUREKA_INSTANCE_HOSTNAME: "api-gateway"
+      # Nếu cần, bạn có thể override các biến khác từ application.properties
     networks:
-      - backend
-
-  # Auth Service
-  auth-service:
-    image: auth-service:latest
-    container_name: auth-service
-    ports:
-      - "8081:8081"
-    depends_on:
-      - eureka-server
-    environment:
-      - SPRING_APPLICATION_NAME=auth-service
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-      - JWT_SECRET=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
-    networks:
-      - backend
-
-  # User Service
-  user-service:
-    image: user-service:latest
-    container_name: user-service
-    ports:
-      - "8082:8082"
-    depends_on:
-      - eureka-server
-    environment:
-      - SPRING_APPLICATION_NAME=user-service
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-    networks:
-      - backend
-
-  # Product Service
-  product-service:
-    image: product-service:latest
-    container_name: product-service
-    ports:
-      - "8083:8083"
-    depends_on:
-      - eureka-server
-    environment:
-      - SPRING_APPLICATION_NAME=product-service
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-    networks:
-      - backend
-
-  # Order Service
-  order-service:
-    image: order-service:latest
-    container_name: order-service
-    ports:
-      - "8084:8084"
-    depends_on:
-      - eureka-server
-    environment:
-      - SPRING_APPLICATION_NAME=order-service
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-    networks:
-      - backend
-
-  # Payment Service
-  payment-service:
-    image: payment-service:latest
-    container_name: payment-service
-    ports:
-      - "8085:8085"
-    depends_on:
-      - eureka-server
-    environment:
-      - SPRING_APPLICATION_NAME=payment-service
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-    networks:
-      - backend
-
-  # Notification Service
-  notification-service:
-    image: notification-service:latest
-    container_name: notification-service
-    ports:
-      - "8086:8086"
-    depends_on:
-      - eureka-server
-    environment:
-      - SPRING_APPLICATION_NAME=notification-service
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-    networks:
-      - backend
+      - gateway-network
 
 networks:
-  backend:
+  gateway-network:
     driver: bridge
