--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -1,29 +1,4 @@
 #Config for localhost
-## Eureka Server Configuration
-#spring.application.name=eureka-server
-#server.port=8761
-#
-## Eureka Server Settings
-#eureka.client.register-with-eureka=false
-#eureka.client.fetch-registry=false
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-#eureka.instance.hostname=localhost
-#
-## Management Endpoints (Monitoring)
-#management.endpoints.web.exposure.include=*
-#management.endpoint.health.show-details=always
-#
-## Logging
-#logging.level.org.springframework.cloud.netflix.eureka=DEBUG
-#logging.level.com.netflix.eureka=DEBUG
-#logging.level.com.netflix.discovery=DEBUG
-#
-## Fix Spring Cloud Config issue
-#spring.cloud.config.enabled=false
-#spring.config.import=optional:configserver:
-
-
-#Config for Docker
 # Eureka Server Configuration
 spring.application.name=eureka-server
 server.port=8761
@@ -31,8 +6,8 @@ server.port=8761
 # Eureka Server Settings
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.instance.hostname=eureka-server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
 
 # Management Endpoints (Monitoring)
 management.endpoints.web.exposure.include=*
@@ -46,4 +21,29 @@ logging.level.com.netflix.discovery=DEBUG
 # Fix Spring Cloud Config issue
 spring.cloud.config.enabled=false
 spring.config.import=optional:configserver:
+
+
+##Config for Docker
+## Eureka Server Configuration
+#spring.application.name=eureka-server
+#server.port=8761
+#
+## Eureka Server Settings
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+#eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+#eureka.instance.hostname=eureka-server
+#
+## Management Endpoints (Monitoring)
+#management.endpoints.web.exposure.include=*
+#management.endpoint.health.show-details=always
+#
+## Logging
+#logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+#logging.level.com.netflix.eureka=DEBUG
+#logging.level.com.netflix.discovery=DEBUG
+#
+## Fix Spring Cloud Config issue
+#spring.cloud.config.enabled=false
+#spring.config.import=optional:configserver:
 
