add Dockerfile multi service and docker-compose root

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,15 +1,29 @@
-# Giai đoạn build: sử dụng Maven với Java 21 để build ứng dụng
+# ========================== STAGE 1: BUILD ==========================
+# Sử dụng Maven + Temurin Java 21 để build
 FROM maven:3.9-eclipse-temurin-21 AS builder
+
+# Khai báo thư mục làm việc trong container
 WORKDIR /app
-# Copy toàn bộ mã nguồn vào container
+
+# Sao chép toàn bộ project (bao gồm pom.xml, src/) vào container
 COPY . .
-# Build ứng dụng, bỏ qua tests
+
+# Chạy lệnh Maven để build JAR (bỏ qua test để build nhanh hơn)
 RUN mvn clean package -DskipTests
 
-# Giai đoạn chạy: sử dụng Eclipse Temurin với JDK 21 để chạy ứng dụng
+
+# ========================== STAGE 2: RUNTIME ==========================
+# Sử dụng image Java 21 nhẹ hơn để chạy ứng dụng
 FROM eclipse-temurin:21-jdk
+
+# Tạo thư mục /app cho container runtime
 WORKDIR /app
-# Copy file JAR từ giai đoạn build mà không đổi tên
-COPY --from=builder /app/target/api-gateway-0.0.1-SNAPSHOT.jar api-gateway-0.0.1-SNAPSHOT.jar
+
+# Sao chép file JAR từ STAGE 1
+COPY --from=builder /app/target/api-gateway-0.0.1-SNAPSHOT.jar api-gateway.jar
+
+# Mở cổng 9000 (khớp với server.port=9000)
 EXPOSE 9000
-ENTRYPOINT ["java", "-jar", "api-gateway-0.0.1-SNAPSHOT.jar"]
+
+# Lệnh khởi chạy Spring Boot khi container start
+CMD ["java", "-jar", "api-gateway.jar"]
