--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -15,14 +15,18 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
 # ===================== Eureka Client (Service Discovery) =====================
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.hostname=localhost
 
 # ===================== Database Configuration (MySQL) =====================
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysql:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Hikari
+spring.datasource.hikari.data-source-properties.allowPublicKeyRetrieval=true
+spring.datasource.hikari.data-source-properties.useSSL=false
 
 # ===================== JPA (Hibernate) =====================
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
