fix docker-compose root done

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -23,8 +23,8 @@ security.jwt.accessToken.expiration=900000    # 15 phút (15 * 60 * 1000)
 security.jwt.refreshToken.expiration=604800000  # 7 ngày (7 * 24 * 60 * 60 * 1000)
 
 # Eureka Client Configuration (Service Discovery)
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
+eureka.instance.hostname=api-gateway
 
 # Spring Cloud Gateway Routes
 spring.cloud.gateway.routes[0].id=auth-service
