--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -17,7 +17,7 @@ logging.level.org.springframework.web=DEBUG
 # ===================== Eureka Client (Service Discovery) =====================
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
-eureka.instance.hostname=localhost
+eureka.instance.hostname=auth-service
 
 # ===================== Database Configuration (MySQL) =====================
 spring.datasource.url=jdbc:mysql://mysql:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true
@@ -29,7 +29,7 @@ spring.datasource.hikari.data-source-properties.allowPublicKeyRetrieval=true
 spring.datasource.hikari.data-source-properties.useSSL=false
 
 # ===================== JPA (Hibernate) =====================
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
