--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,3 +1,79 @@
+#version: "3.8"
+#
+#services:
+#  # 1. Eureka Server
+#  eureka-service:
+#    container_name: eureka-service
+#    build:
+#      context: ./eureka-service
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8761:8761"
+#    networks:
+#      - microservice-net
+#
+#  # 2. API Gateway
+#  api-gateway:
+#    container_name: api-gateway
+#    build:
+#      context: ./api-gateway
+#      dockerfile: Dockerfile
+#    ports:
+#      - "9000:9000"
+#    depends_on:
+#      - eureka-service
+#    environment:
+#      EUREKA_INSTANCE_HOSTNAME: api-gateway
+#      # Ví dụ nếu muốn chạy profile "docker" trong Spring:
+#      # SPRING_PROFILES_ACTIVE: docker
+#    networks:
+#      - microservice-net
+#
+#  # 3. Auth Service
+#  auth-service:
+#    container_name: auth-service
+#    build:
+#      context: ./auth-service
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8081:8081"
+#    depends_on:
+#      - eureka-service
+#      - mysql
+#    environment:
+#      # Kết nối tới MySQL container (tên "mysql")
+#      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#      SPRING_DATASOURCE_USERNAME: root
+#      SPRING_DATASOURCE_PASSWORD: password
+#      # Cấu hình eureka
+#      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-service:8761/eureka
+#      EUREKA_INSTANCE_HOSTNAME: auth-service
+#
+#    networks:
+#      - microservice-net
+#
+#  # 4. MySQL Database
+#  mysql:
+#    container_name: mysql
+#    image: mysql:8.0
+#    environment:
+#      MYSQL_ROOT_PASSWORD: password
+#      MYSQL_DATABASE: auth_db
+#      # Không nên dùng MYSQL_USER=root
+#    ports:
+#      - "3306:3306"
+#    volumes:
+#      - mysql_data:/var/lib/mysql
+#    networks:
+#      - microservice-net
+#
+#networks:
+#  microservice-net:
+#
+#volumes:
+#  mysql_data:
+
+
 version: "3.8"
 
 services:
@@ -24,8 +100,7 @@ services:
       - eureka-service
     environment:
       EUREKA_INSTANCE_HOSTNAME: api-gateway
-      # Ví dụ nếu muốn chạy profile "docker" trong Spring:
-      # SPRING_PROFILES_ACTIVE: docker
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-service:8761/eureka
     networks:
       - microservice-net
 
@@ -41,29 +116,66 @@ services:
       - eureka-service
       - mysql
     environment:
-      # Kết nối tới MySQL container (tên "mysql")
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: password
-      # Cấu hình eureka
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-service:8761/eureka
       EUREKA_INSTANCE_HOSTNAME: auth-service
-
     networks:
       - microservice-net
 
-  # 4. MySQL Database
+  # 4. Product Service
+  product-service:
+    container_name: product-service
+    build:
+      context: ./product-service
+      dockerfile: Dockerfile
+    ports:
+      - "8082:8082"
+    depends_on:
+      - eureka-service
+      - mysql
+      - minio
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/musicstore?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: password
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-service:8761/eureka
+      EUREKA_INSTANCE_HOSTNAME: product-service
+      MINIO_URL: http://minio:9000
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+      MINIO_BUCKET_NAME: musicstore
+    networks:
+      - microservice-net
+
+  # 5. MySQL Database
   mysql:
     container_name: mysql
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: auth_db
-      # Không nên dùng MYSQL_USER=root
     ports:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./mysql/init-scripts:/docker-entrypoint-initdb.d
+    networks:
+      - microservice-net
+
+  # 6. MinIO (Lưu trữ ảnh sản phẩm)
+  minio:
+    container_name: minio
+    image: quay.io/minio/minio
+    ports:
+      - "9001:9000"  # Đổi mapping từ 9000:9000 thành 9001:9000
+      - "9090:9090"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server /data --console-address ":9090"
+    volumes:
+      - minio_data:/data
     networks:
       - microservice-net
 
@@ -72,3 +184,6 @@ networks:
 
 volumes:
   mysql_data:
+  minio_data:
+
+
