register_email_ui

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -53,6 +53,13 @@ management.endpoint.health.probes.enabled=true
 management.endpoint.info.enabled=true
 management.endpoint.beans.enabled=true
 
+# ===================== thymeleaf =====================
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
+
 #Run for Docker
 ## ===================== Application Configuration =====================
 #spring.application.name=auth-service
