--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,6 +4,8 @@
 spring.application.name=product-service
 server.port=8082
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
 # -----------------------------------
 # Database Configuration (MySQL)
 # -----------------------------------
