add config granafa,rate limit,prometheus and tracing,refactor docker-compose root

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -14,8 +14,10 @@ spring.security.ignored=/api/auth/**
 
 
 # Logging
+logging.level.root=INFO
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.cloud.gateway=DEBUG
 
 # JWT Security Configuration
 security.jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
@@ -59,6 +61,14 @@ spring.cloud.gateway.routes[6].predicates[0]=Path=/api/notifications/**
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 
+# Redis Rate Limiting Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# Tracing with Zipkin & Micrometer
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
+
 # Actuator Endpoints (Monitoring)
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
@@ -87,96 +97,4 @@ resilience4j.retry.configs.default.max-attempts=3
 resilience4j.retry.configs.default.wait-duration=2s
 
 
-#Config run with docker
-## API Gateway Configuration
-#spring.application.name=api-gateway
-#server.port=9000
-#app.base-url=http://api-gateway:9000
-#
-## Encoding
-#server.servlet.encoding.charset=UTF-8
-#server.servlet.encoding.enabled=true
-#server.servlet.encoding.force=true
-#server.tomcat.uri-encoding=UTF-8
-#
-#spring.security.ignored=/api/auth/**
-#
-## CORS Configuration
-#spring.web.cors.allowed-origins=*
-#spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-#spring.web.cors.allowed-headers=Authorization, Content-Type
-#spring.web.cors.allow-credentials=true
-#
-## Logging
-#logging.level.org.springframework.security=DEBUG
-#logging.level.org.springframework.web=DEBUG
-#
-## JWT Security Configuration
-#security.jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
-#security.jwt.accessToken.expiration=900000    # 15 phút (15 * 60 * 1000)
-#security.jwt.refreshToken.expiration=604800000  # 7 ngày (7 * 24 * 60 * 60 * 1000)
-#
-## Eureka Client Configuration (Service Discovery)
-#eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-#eureka.instance.hostname=api-gateway
-#
-## Spring Cloud Gateway Routes
-#spring.cloud.gateway.routes[0].id=auth-service
-#spring.cloud.gateway.routes[0].uri=lb://AUTH-SERVICE
-#spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**
-#spring.cloud.gateway.routes[0].filters[0]=RewritePath=/api/auth/(?<segment>.*), /${segment}
-#
-#spring.cloud.gateway.routes[1].id=user-service
-#spring.cloud.gateway.routes[1].uri=lb://USER-SERVICE
-#spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
-#
-#spring.cloud.gateway.routes[2].id=product-service
-#spring.cloud.gateway.routes[2].uri=lb://PRODUCT-SERVICE
-#spring.cloud.gateway.routes[2].predicates[0]=Path=/api/products/**
-#
-#spring.cloud.gateway.routes[3].id=order-service
-#spring.cloud.gateway.routes[3].uri=lb://ORDER-SERVICE
-#spring.cloud.gateway.routes[3].predicates[0]=Path=/api/orders/**
-#
-#spring.cloud.gateway.routes[4].id=cart-service
-#spring.cloud.gateway.routes[4].uri=lb://CART-SERVICE
-#spring.cloud.gateway.routes[4].predicates[0]=Path=/api/cart/**
-#
-#spring.cloud.gateway.routes[5].id=payment-service
-#spring.cloud.gateway.routes[5].uri=lb://PAYMENT-SERVICE
-#spring.cloud.gateway.routes[5].predicates[0]=Path=/api/payment/**
-#
-#spring.cloud.gateway.routes[6].id=notification-service
-#spring.cloud.gateway.routes[6].uri=lb://NOTIFICATION-SERVICE
-#spring.cloud.gateway.routes[6].predicates[0]=Path=/api/notifications/**
-#
-## Swagger UI Configuration
-#springdoc.swagger-ui.path=/swagger-ui.html
-#springdoc.api-docs.path=/api-docs
-#
-## Actuator Endpoints (Monitoring)
-#management.endpoints.web.exposure.include=*
-#management.endpoint.health.show-details=always
-#management.health.cassandra.enabled=true
-#management.health.circuitbreakers.enabled=true
-#management.endpoint.health.probes.enabled=true
-#management.endpoint.info.enabled=true
-#management.endpoint.beans.enabled=true
-#
-## Resilience4j Circuit Breaker Configs (Handling Failures)
-#resilience4j.circuitbreaker.configs.default.register-health-indicator=true
-#resilience4j.circuitbreaker.configs.default.sliding-window-type=COUNT_BASED
-#resilience4j.circuitbreaker.configs.default.sliding-window-size=10
-#resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
-#resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=5s
-#resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=3
-#resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
-#resilience4j.circuitbreaker.configs.default.minimum-number-of-calls=5
-#
-## Resilience4j Timeout Properties
-#resilience4j.timelimiter.configs.default.timeout-duration=3s
-#
-## Resilience4j Retry Properties
-#resilience4j.retry.configs.default.max-attempts=3
-#resilience4j.retry.configs.default.wait-duration=2s
 
