done extractJWT get role on Product-Service

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.port=8082
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
+#JWT
+jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
 # -----------------------------------
 # Database Configuration (MySQL)
 # -----------------------------------
