--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -188,6 +188,7 @@
 #
 #
 
+########################################################################################
 
 version: "3.8"
 
@@ -269,7 +270,27 @@ services:
     networks:
       - microservice-net
 
-  # 5. MySQL Database
+  # 5. User Service (Quản lý thông tin cá nhân)
+  user-service:
+    container_name: user-service
+    build:
+      context: ./user-service
+      dockerfile: Dockerfile
+    ports:
+      - "8083:8083"
+    depends_on:
+      - eureka-service
+      - mysql
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/user_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: password
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-service:8761/eureka
+      EUREKA_INSTANCE_HOSTNAME: user-service
+    networks:
+      - microservice-net
+
+  # 6. MySQL Database
   mysql:
     container_name: mysql
     image: mysql:8.0
@@ -283,7 +304,7 @@ services:
     networks:
       - microservice-net
 
-  # 6. MinIO (Lưu trữ ảnh sản phẩm)
+  # 7. MinIO (Lưu trữ ảnh sản phẩm)
   minio:
     container_name: minio
     image: quay.io/minio/minio
@@ -299,7 +320,7 @@ services:
     networks:
       - microservice-net
 
-  # 7. Redis (Caching & Rate Limiting)
+  # 8. Redis (Caching & Rate Limiting)
   redis:
     image: redis:7.2
     container_name: redis
@@ -308,7 +329,7 @@ services:
     networks:
       - microservice-net
 
-  # 8. Zipkin (Distributed Tracing)
+  # 9. Zipkin (Distributed Tracing)
   zipkin:
     image: openzipkin/zipkin:latest
     container_name: zipkin
@@ -317,7 +338,7 @@ services:
     networks:
       - microservice-net
 
-  # 9. Prometheus (Monitoring)
+  # 10. Prometheus (Monitoring)
   prometheus:
     image: prom/prometheus
     container_name: prometheus
@@ -328,7 +349,7 @@ services:
     networks:
       - microservice-net
 
-  # 10. Grafana (Visualization)
+  # 11. Grafana (Visualization)
   grafana:
     image: grafana/grafana
     container_name: grafana
@@ -346,7 +367,7 @@ volumes:
   mysql_data:
   minio_data:
 
-#
+
 #Eureka Dashboard: http://localhost:8761
 #API Gateway: http://localhost:9000
 #Zipkin Tracing: http://localhost:9411
