--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -39,7 +39,7 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
 
 spring.cloud.gateway.routes[2].id=product-service
 spring.cloud.gateway.routes[2].uri=lb://PRODUCT-SERVICE
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/products/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/products/**, /api/categories/**
 
 spring.cloud.gateway.routes[3].id=order-service
 spring.cloud.gateway.routes[3].uri=lb://ORDER-SERVICE
